# abbyy-finereader-ocr-mcp

./: .gitignore  README.md  engines.py  evaluation.py  index.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: codeql.yml  quality.yml
tests/: test_engines.py  test_evaluation.py  test_index.py  test_smoke.py
