[project]
name = "abbyy-finereader-ocr-mcp"
version = "0.1.0"
description = "Multi-engine OCR MCP server (RapidOCR, Tesseract, ABBYY FineReader 16) with accuracy evaluation."
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.27",
    "rapidocr-onnxruntime>=1.4",
    "onnxruntime>=1.26",
    "pytesseract>=0.3.13",
    "Pillow>=11",
    "numpy>=2",
    "pymupdf>=1.27",
    "jiwer>=4",
    "opencv-python-headless>=4.10",
    "pyperclip>=1.9",
]

[project.optional-dependencies]
test = ["pytest>=8", "pytest-cov>=5"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
pythonpath = ["."]

[tool.coverage.run]
branch = true
source = ["index", "engines", "evaluation"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.basedpyright]
typeCheckingMode = "standard"
pythonVersion = "3.12"
# Type-check the shipped server modules; the test suite is dynamically typed
# (heavy monkeypatch/sys.modules mocking of optional OCR backends).
include = ["index.py", "engines.py", "evaluation.py"]
# Optional OCR backends are real runtime deps but ship no type stubs.
reportMissingModuleSource = "none"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "S", "C4", "SIM"]
# S101 (assert) is fine in tests; subprocess/tempfile use is intentional & local.
[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S603", "S311"]

[tool.setuptools]
py-modules = ["index", "engines", "evaluation"]
